# linguagap

./: Dockerfile  compose.yaml  pyproject.toml  sonar-project.properties  tsconfig.json
.github/workflows/: ci.yml
chart/: values.yaml
chart/templates/: deployment.yaml  secret.yaml
scripts/ci/: ty_gitlab_to_sonar_external_issues.py
src/app/: auth.py  demo_accounts.json  deps.py  languages.py  main.py  session_registry.py  streaming.py  streaming_policy.py  tts.py
src/app/backends/asr/: whisper.py
src/app/backends/summarization/: qwen3.py
src/app/backends/translation/: translategemma.py
src/app/routes/: __init__.py  admin.py  auth.py  inference.py  pages.py
src/app/streaming/: __init__.py  _metrics.py  asr.py  broadcast.py  handler.py  serialize.py  session.py  trace.py  viewer.py
static/: admin-login.html  admin.html  index.html  login.html  translate.html  viewer.html
static/css/: host-v3.css  tokens.css  topbar.css  translate-v3.css  viewer-v3.css
static/js/: admin.js  admin_login.js  audio_capture_worklet.js  host.js  login.js  transcript_export.js  translate.js  types.d.ts  viewer.js
static/js/lib/: audio.js  dom.js
tests/: test_admin.py  test_auth.py  test_backends_base.py  test_main.py  test_session_registry.py  test_streaming.py  test_streaming_dual_channel.py  test_streaming_helpers.py  test_streaming_policy_extra.py  test_streaming_session.py  test_summarization.py  test_tts.py  test_viewer_websocket.py  test_websocket_handler.py
tests/e2e/: test_bilingual_dialogue.py
tests/e2e/evaluation/: judge.py  reports.py
tests/e2e/scripts/: evaluate_scenarios.py  generate_audio_fixtures.py  test_single_file.py
tests/e2e/streaming/: client.py
